--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     	<meta name="description" content="">
     	<meta name="author" content="">
 
-    	<title>Landing Page - Start Bootstrap Theme</title>
+    	<title>Aakist</title>
 
     	<!-- Bootstrap Core CSS -->
     	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -140,12 +140,49 @@
 
     </div>
     <!-- /.intro-header -->
-
+    <br>
+    <div class="col-lg-12">
+        <h2 class="intro-text text-center">Everyone's
+            <strong>A Maker</strong>
+        </h2>
+        <br>
+        <p class="text-center">Whether you're an experienced 3D designer or just want to personalize a unique gift, Aakist gives you the tools to make exactly what you want</p>
+    </div>
+    <br><br><br>
+    
+    <section id="team" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <a href="#"><h4>Hire a Designer</h4></a><br>
+                        <p class="text-muted">Work with our Community to design that something special</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <a href=""><h4>Easy Creators</h4></a><br>
+                        <p class="text-muted">Little yo no skill needed to amke peronalized gifts</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <a href=""><h4>Upload Your Design</h4></a><br>
+                        <p class="text-muted">You've got the skills and 3D file ready to go!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 		<script>
     		$(document).ready(function () {
         	$('.dropdown-toggle').dropdown();
     		});
 		</script>
+
 	</body>
 	
 </html>
