--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     	<link href="css/bootstrap.min.css" rel="stylesheet">
 
     	<!-- Custom CSS -->
-    	<link href="css/landing-page.css" rel="stylesheet">
+    	<link href="css/style.css" rel="stylesheet">
 
     	<!-- Custom Fonts -->
     	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -187,10 +187,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Customizable
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -202,10 +202,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Accessories
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -217,10 +217,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Jewelry
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -232,10 +232,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Games
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -247,10 +247,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Art
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -262,10 +262,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Gadgets
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SHOP NOW
                                 </div>
                             </div>
                         </div>
@@ -274,11 +274,242 @@
             </div>
         </div>
     </section>
-		<script>
-    		$(document).ready(function () {
-        	$('.dropdown-toggle').dropdown();
-    		});
-		</script>
+
+    <section id="portfolio1" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="intro-text text-center">3D Print In Over 50 Materials</h2>
+                    <h3 class="section-subheading text-muted">From plastics to porcelain, silver to sandstone, Shapeways offers a large collection of materials for you to create unique products</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-6 portfolio-item1">
+                    <a href="#portfolioModal1" class="portfolio-link1" data-toggle="modal">
+                        <div class="portfolio-hover1">
+                            <div class="portfolio-hover-content1">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption1">
+                        <h4>Aluminium</h4>
+                        <p class="text-muted">Our newest and strongest material is perfect for tools, drone parts and interlocking designs.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 portfolio-item1">
+                    <a href="#portfolioModal2" class="portfolio-link1" data-toggle="modal">
+                        <div class="portfolio-hover1">
+                            <div class="portfolio-hover-content1">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption1">
+                        <h4>Metals</h4>
+                        <p class="text-muted">Create beautiful and unique jewelry in a variety of precious metals like gold, steel, silver, brass, and bronze.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 portfolio-item1">
+                    <a href="#portfolioModal3" class="portfolio-link1" data-toggle="modal">
+                        <div class="portfolio-hover1">
+                            <div class="portfolio-hover-content1">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption1">
+                        <h4>Plastics</h4>
+                        <p class="text-muted">Miniatures to model trains, our plastics provide an incredibly versatile way to realize your ideas.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 portfolio-item1">
+                    <a href="#portfolioModal4" class="portfolio-link1" data-toggle="modal">
+                        <div class="portfolio-hover1">
+                            <div class="portfolio-hover-content1">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption1">
+                        <h4>Porcelain</h4>
+                        <p class="text-muted">Personalize your home with our colorful food, dishwasher, and oven safe material.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h2 class="intro-text text-center">Material Sample Kits</h2>
+            <h3 class="section-subheading text-muted">Get your hands on some of our materials.</h3>
+        </div>
+    </div>
+    <section id="team" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
+                        <a href="#"><h4>Color And Finish</h4></a><br>
+                        <p class="text-muted">Great if you're designing gadgets,jewelry or miniatures</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
+                        <a href=""><h4>Basic Kit</h4></a><br>
+                        <p class="text-muted">The Basic Sample Kit includes our most popular materials</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/portfolio/roundicons.png" class="img-responsive img-circle" alt="">
+                        <a href=""><h4>Metals</h4></a><br>
+                        <p class="text-muted">Great for designing jewelry,replacement parts, or tools</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
+                        <p class="text-muted">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
+                        <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
+                            <p class="text-muted">Collected Edition</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/ipad.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <aside class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/wordpress.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-4">
+                    <a href="#">
+                        <img src="img/logos/microlancer.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; AAKIST 2016</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+	<script>
+        $(document).ready(function () {
+        $('.dropdown-toggle').dropdown();
+    	});
+	</script>
 
 	</body>
 	
