--- a/index.html
+++ b/index.html
@@ -120,15 +120,12 @@
                         <h1>Aakist</h1>
                         <h3>Think &nbsp;&nbsp;&nbsp;&nbsp;Create&nbsp;&nbsp;&nbsp;&nbsp;Print&nbsp;&nbsp;&nbsp;&nbsp;Sell</h3>
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
+                        <ul class="list-inline">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://twitter.com/SBootstrap" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">SHOP</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">MAKE</span></a>
                             </li>
                         </ul>
                     </div>
@@ -181,95 +178,59 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Customizable
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="overlay">
+                                <h2>CUSTOMIZABLE</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Accessories
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ACCESSORIES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Jewelry
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
+                            <div class="overlay">
+                                <h2>JEWELERY</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Games
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GAMES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Art
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ART</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Gadgets
-                                </div>
-                                <div class="project-name">
-                                    SHOP NOW
-                                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GADGETS</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
