Category Pages Added

--- a/index.html
+++ b/index.html
@@ -246,56 +246,44 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <a href="#portfolioModal1" class="portfolio-link1" data-toggle="modal">
-                        <div class="portfolio-hover1">
-                            <div class="portfolio-hover-content1">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
-                    </a>
+                    <div class="portfolio-item">
+                        <a href="#">
+                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
+                        </a>
+                    </div>
                     <div class="portfolio-caption1">
                         <h4>Aluminium</h4>
                         <p class="text-muted">Our newest and strongest material is perfect for tools, drone parts and interlocking designs.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <a href="#portfolioModal2" class="portfolio-link1" data-toggle="modal">
-                        <div class="portfolio-hover1">
-                            <div class="portfolio-hover-content1">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
-                    </a>
+                    <div class="portfolio-item">
+                        <a href="#">
+                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
+                        </a>
+                    </div>
                     <div class="portfolio-caption1">
                         <h4>Metals</h4>
                         <p class="text-muted">Create beautiful and unique jewelry in a variety of precious metals like gold, steel, silver, brass, and bronze.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <a href="#portfolioModal3" class="portfolio-link1" data-toggle="modal">
-                        <div class="portfolio-hover1">
-                            <div class="portfolio-hover-content1">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
-                    </a>
+                    <div class="portfolio-item">
+                        <a href="#">
+                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
+                        </a>
+                    </div>
                     <div class="portfolio-caption1">
                         <h4>Plastics</h4>
                         <p class="text-muted">Miniatures to model trains, our plastics provide an incredibly versatile way to realize your ideas.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item1">
-                    <a href="#portfolioModal4" class="portfolio-link1" data-toggle="modal">
-                        <div class="portfolio-hover1">
-                            <div class="portfolio-hover-content1">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a>
+                    <div class="portfolio-item">
+                        <a href="#">
+                            <img class="img-portfolio img-responsive" src="img/portfolio/startup-framework.png">
+                        </a>
+                    </div>
                     <div class="portfolio-caption1">
                         <h4>Porcelain</h4>
                         <p class="text-muted">Personalize your home with our colorful food, dishwasher, and oven safe material.</p>
@@ -303,7 +291,6 @@
                 </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <div class="row">
