--- a/jewelery.html
+++ b/jewelery.html
@@ -292,6 +292,9 @@
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
                     </div>
+                    <div class="col-md-4 portfolio-item">
+                        <a href="#" class="btn btn-dark">View More Items</a>
+                    </div>
                 </div>
             </div>
         </div>
