Customized Mosaic view

--- a/Gadgets.html
+++ b/Gadgets.html
@@ -1,113 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="description" content="">
-    	<meta name="author" content="">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    	<title>Aakist</title>
+        <title>Aakist</title>
 
-    	<!-- Bootstrap Core CSS -->
-    	<link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    	<!-- Custom CSS -->
-    	<link href="css/style.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="css/style.css" rel="stylesheet">
 
-    	<!-- Custom Fonts -->
-    	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+        <!-- Custom Fonts -->
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
- 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
-	</head>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+    </head>
 
-	<body>
-		<!-- Navigation -->
-    	<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        	<div class="container topnav">
-            	<!-- Brand and toggle get grouped for better mobile display -->
-            	<div class="navbar-header">
-                	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    	<span class="sr-only">Toggle navigation</span>
-                    	<span class="icon-bar"></span>
-                    	<span class="icon-bar"></span>
-                    	<span class="icon-bar"></span>
-                	</button>
-                	<a class="navbar-brand topnav" href="#">AAKIST</a>
-            	</div>
-            	<!-- Collect the nav links, forms, and other content for toggling -->
-            	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            		<ul class="nav navbar-nav navbar-left dropdown">
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Shop 
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Make
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Community
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            		</ul>
-                	<ul class="nav navbar-nav navbar-right">
-                		<li>
-                			<form class="navbar-form navbar-right" role="search">
-        						<div class="form-group has-feedback has-feedback-right">
-          							<input type="text" class="form-control" placeholder="Search">
-          							<a href="#"><i class="form-control-feedback glyphicon glyphicon-search" aria-hidden="true"></i></a>
-        						</div>
-        						<button class="btn btn-default">UPLOAD</button>
-      						</form>
-                		</li>
-                    	<li>
-                        	<a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                    	</li>
-                    	<li>
-                        	<a href="#">Join</a>
-                    	</li>
-                    	<li>
-                        	<a href="#">Sign In</a>
-                    	</li>
-                	</ul>
-            	</div>
-            	<!-- /.navbar-collapse -->
-        	</div>
-        	<!-- /.container -->
-    	</nav>
+    <body>
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+            <div class="container topnav">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand topnav" href="#">AAKIST</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-left dropdown">
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Shop 
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Make
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Community
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <form class="navbar-form navbar-right" role="search">
+                                <div class="form-group has-feedback has-feedback-right">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                    <a href="#"><i class="form-control-feedback glyphicon glyphicon-search" aria-hidden="true"></i></a>
+                                </div>
+                                <button class="btn btn-default">UPLOAD</button>
+                            </form>
+                        </li>
+                        <li>
+                            <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                        </li>
+                        <li>
+                            <a href="#">Join</a>
+                        </li>
+                        <li>
+                            <a href="#">Sign In</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
         <br><br><br><br><br>
 
         <div class="container">
@@ -142,62 +142,74 @@
                                     <h1 class="page-header">Gadgets</h1>
                                  </div>
                             </div>
-                            <div class="row no-gutter popup-gallery">
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>CUSTOMIZABLE</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>ACCESSORIES</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>JEWELERY</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>GAMES</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>ART</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>GADGETS</h2>
-                                                <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="overlay">
+                                <h2>CUSTOMIZABLE</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ACCESSORIES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
+                            <div class="overlay">
+                                <h2>JEWELERY</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GAMES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ART</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GADGETS</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
                         </div>
                     </div>
                     <br><br><br><br>
@@ -291,6 +303,9 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
+                    </div>
+                    <div class="class="col-md-4 portfolio-item"">
+                        <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
                 </div>
             </div>
