--- a/shop.html
+++ b/shop.html
@@ -115,10 +115,10 @@
                 </h1>
             </div>
         </div>
-        <section class="no-padding" id="portfolio">
-        <div class="container">
+            <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                             <div class="overlay">
@@ -127,7 +127,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
                             <div class="overlay">
@@ -136,7 +136,14 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
@@ -145,7 +152,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
                             <div class="overlay">
@@ -154,7 +161,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
                             <div class="overlay">
@@ -163,7 +170,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
                             <div class="overlay">
@@ -174,7 +181,7 @@
                 </div>
             </div>
         </div>
-        </section>
+    </section>
 
         <br><br><br>
 
@@ -187,29 +194,29 @@
         <br><br><br>
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
@@ -219,29 +226,29 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
@@ -250,29 +257,29 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
                 <h4 class="text-center">
-                    <a href="#">Product Name</a>
+                    <a href="item.html">Product Name</a>
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
