--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">SHOP</span></a>
+                                <a href="shop.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">SHOP</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">MAKE</span></a>
+                                <a href="make.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">MAKE</span></a>
                             </li>
                         </ul>
                     </div>
@@ -178,7 +178,7 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                             <div class="overlay">
@@ -187,7 +187,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
                             <div class="overlay">
@@ -196,7 +196,14 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
@@ -205,7 +212,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
                             <div class="overlay">
@@ -214,7 +221,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
                             <div class="overlay">
@@ -223,7 +230,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
                             <div class="overlay">
