--- a/jewelery.html
+++ b/jewelery.html
@@ -142,62 +142,74 @@
                                     <h1 class="page-header">Jewelery</h1>
                                  </div>
                             </div>
-                            <div class="row no-gutter popup-gallery">
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>CUSTOMIZABLE</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>ACCESSORIES</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>JEWELERY</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>GAMES</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>ART</h2>
-                                            <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                    <div class="hovereffect">
-                                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
-                                        <div class="overlay">
-                                            <h2>GADGETS</h2>
-                                                <a class="info" href="#">SHOP NOW</a>
-                                        </div>
-                                    </div>
-                                </div>
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="overlay">
+                                <h2>CUSTOMIZABLE</h2>
+                                <a class="info" href="#">SHOP NOW</a>
                             </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ACCESSORIES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
+                            <div class="overlay">
+                                <h2>JEWELERY</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GAMES</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
+                            <div class="overlay">
+                                <h2>ART</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
+                            <div class="overlay">
+                                <h2>GADGETS</h2>
+                                <a class="info" href="#">SHOP NOW</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
                         </div>
                     </div>
                     <br><br><br><br>
@@ -292,7 +304,7 @@
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
                     </div>
-                    <div class="col-md-4 portfolio-item">
+                    <div class="class="col-md-4 portfolio-item"">
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
                 </div>
