--- a/make.html
+++ b/make.html
@@ -176,14 +176,12 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
-                    <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-lightbulb-o fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Think</strong>
@@ -194,7 +192,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-pencil fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Create</strong>
@@ -205,7 +203,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-print fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Print</strong>
@@ -216,7 +214,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-globe fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Sell</strong>
@@ -241,7 +239,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                             <div class="overlay">
                                 <h2>CUSTOMIZABLE</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -250,13 +248,24 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
                             <div class="overlay">
                                 <h2>ACCESSORIES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <div class="collapse" id="collapseExample">
+        <div class="well">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+    </div>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -266,7 +275,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
                                 <h2>JEWELERY</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -275,7 +284,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
                             <div class="overlay">
                                 <h2>GAMES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -284,7 +293,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
                             <div class="overlay">
                                 <h2>ART</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -293,13 +302,24 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
                             <div class="overlay">
                                 <h2>GADGETS</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <div class="collapse" id="collapseExample1">
+        <div class="well">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+    </div>
 <br><br>
     <div class="intro-header">
         <div class="container">
@@ -344,5 +364,10 @@
         </div>
     </footer>
 
+<script>
+        $(document).ready(function () {
+        $('.dropdown-toggle').dropdown();
+        });
+    </script>
     </body>
 </html>
