--- a/For Your home.html
+++ b/For Your home.html
@@ -353,5 +353,12 @@
             </div>
         </div>
     </footer>
+
+    
+<script>
+        $(document).ready(function () {
+        $('.dropdown-toggle').dropdown();
+        });
+    </script>
     </body>
 </html>
