--- a/Gadgets.html
+++ b/Gadgets.html
@@ -353,5 +353,11 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        $(document).ready(function () {
+        $('.dropdown-toggle').dropdown();
+        });
+    </script>
     </body>
 </html>
