--- a/item.html
+++ b/item.html
@@ -248,6 +248,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+<script>
+        $(document).ready(function () {
+        $('.dropdown-toggle').dropdown();
+        });
+    </script>
 </body>
 
 </html>
